# simple-chat

./: Cargo.toml  README.md
src/lib/: client_handler.rs  mod.rs  server_handler.rs
src/lib/actor/: mod.rs  server_actor.rs  tcp_handler.rs  traits.rs
src/lib/actor_impl/: mod.rs  server_impl.rs  tcp_impl.rs
src/lib/client_handler/: client_state.rs  handler.rs  mod.rs  msg_handler.rs
src/lib/msg/: mod.rs
