[package]
name = "simple_chat"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
once_cell = "1.19.0"
